# num-thry-haskell

./: LICENSE  README.md  numThry.cabal
src/: NumThry.hs  prho.hs
