name:                numThry
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/numThry#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2017 Author name here
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     NumThry
  build-depends:       base >= 4.7 && < 5
  default-language:    Haskell2010

executable prho
  hs-source-dirs:      src
  main-is:             prho.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
  other-modules:       NumThry

source-repository head
  type:     git
  location: https://github.com/githubuser/numThry
